--- a/css/expore.css
+++ b/css/expore.css
@@ -453,6 +453,271 @@ section  h1 {
         padding: 15px;
         border-radius: 4px;
       }
+@media only screen and (max-width: 1400px){
+    header {
+        width: 100%;
+        padding: 15px 120px;
+        height: 650px;
+    }
+    header:before{    
+        height: 650px;  
+    }
+    .n2_center {
+        top: 35%;
+        left: 50%;
+    }
+    .pagination a {
+        left: 32%;
+        font-size: 15px;
+      }
+}
+@media only screen and (max-width: 1200px) {
+    header {
+        width: 100%;
+        padding: 15px 120px;
+        height: 550px;
+    }
+    header:before{    
+        height: 550px;  
+    }
+    .n2_center {
+        top: 30%;
+        left: 50%;
+    }
+
+    .n2_center h1 {
+        font-size: 90px;
+    }
+    .n2_center h4 {
+        font-size: 45px;
+    }
+    .n2_search{
+        height: 60px;
+    }
+    .n2_button {
+        font-size: 15px;
+        padding: 9px 5px;
+        width: 250px;
+        margin-top: 10px;
+    }
+    .custom-select {
+        position: relative;
+        width: 200px;
+        margin: 10px;
+    }
+    
+    .n2_container {
+        grid-template-columns: 50% 50%;
+    }
+    .pagination a {
+        left: 30%;
+        font-size: 15px;
+      }
+}
+@media only screen and (max-width: 992px) {
+    header {
+        width: 100%;
+        padding: 15px 120px;
+        height: 500px;
+    }
+    header:before{    
+        height: 500px;  
+    }
+
+    header .n2_logo {
+        font-size: 20px;
+    }
+
+    header .n2_navigation {
+        display: none;
+
+    }
+
+    header .n2_navigation.active {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: rgba(1, 1, 1, 0.5);
+
+    }
+
+    header .n2_navigation.active .n2_navigation_items {
+        background: #fff;
+        width: 500px;
+        max-width: 500px;
+        margin: 20px;
+        padding: 40px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-radius: 5px;
+        box-shadow: 0 5px 25px rgb(1 1 1 / 20%);
+    }
+
+    header .n2_navigation .n2_navigation_items a {
+        color: #222;
+        font-size: 25px;
+        margin: 20px;
+    }
+
+    header .n2_navigation .n2_navigation_items a:before {
+        background: #222;
+        height: 5px;
+    }
+    .n2_center {
+        top: 30%;
+        left: 50%;
+    }
+
+    .n2_center h1 {
+        font-size: 60px;
+    }
+    .n2_center h4 {
+        font-size: 30px;
+    }
+    .n2_search{
+        height: 50px;
+    }
+    section h1{
+        font-size: 22px;
+    }
+    .n2_button {
+        font-size: 14px;
+        padding: 9px 5px;
+        width: 250px;
+        margin-top: 10px;
+    }
+    .custom-select {
+        position: relative;
+        width: 200px;
+        margin: 10px;
+    }
+    
+    .n2_container_title h1 {
+        font-size: 25px;
+    }
+
+    .n2_container {
+        grid-template-columns: 50% 50%;
+    }
+    h4,
+    .h4 {
+        font-size: 15px;
+    }
+
+    .n2_footer .n2_footer_items li {
+        font-size: 13px;
+    }
+
+    header .n2_navigation .n2_navigation_items a:hover {
+        color: rgb(10, 10, 10);
+    }
+    .n2_menu_btn {
+        z-index: 777;
+        background: url(../image/menu1.png)no-repeat;
+        background-size: 30px;
+        background-position: center;
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+        transition: 0.3s ease;
+    }
+
+    .n2_menu_btn.active {
+        z-index: 999;
+        background: url(../image/cross.png)no-repeat;
+        background-size: 38px;
+        background-position: center;
+        transition: 0.3s ease;
+    }
+}
+    @media only screen and (max-width: 574px){
+header {
+    width: 100%;
+    padding: 15px 40px;
+    height: 400px;
+}
+header:before{    
+    height: 400px;  
+}
+.n2_center {
+    top: 20%;
+    left: 50%;
+}
+
+.n2_center h1 {
+    font-size: 50px;
+}
+.n2_center h4 {
+    font-size: 25px;
+}
+.n2_search{
+    height: 60px;
+}
+.n2_button {
+    font-size: 10px;
+    padding: 9px 5px;
+    width: 100px;
+    margin-top: 10px;
+}
+.custom-select {
+    position: relative;
+    width: 110px;
+    margin: 10px;
+    font-size: 10px;
+}
+
+.n2_container_title h1 {
+    font-size: 20px;
+}
+
+.n2_container_title p {
+    font-size: 18px;
+    margin-bottom: 40px;
+}
+.n2_container {
+    grid-template-columns: 100%;
+}
+.pagination a {
+    left: 10%;
+    font-size: 13px;
+  }
+h4,
+.h4 {
+    font-size: 12px;
+}
+
+.n2_footer .n2_footer_items li {
+    font-size: 10px;
+}
+
+}
+@media only screen and (max-width: 474px){
+    header .n2_logo {
+        font-size: 15px;
+    }
+
+    header {
+        width: 100%;
+        padding: 15px 40px;
+        height: 350px;
+    }
+    header:before {
+        height: 350px;
+    }
+    .n2_footer_items h4 {
+        font-size: 12px;
+    }
+
+    .n2_footer .n2_footer_items li {
+        font-size: 9px;
+    }
+}
       
  #myBtn:hover {
         background-color: #555;
