--- a/css/tour.css
+++ b/css/tour.css
@@ -94,6 +94,7 @@ header .n2_image img {
 }
 
 .n2_center {
+    z-index: 666;
     position: absolute;
     top: 40%;
     left: 50%;
@@ -107,7 +108,7 @@ header .n2_image img {
 }
 
 .n2_center h1 {
-    z-index: 777;
+    z-index: 666;
     color: #ffffff;
     font-size: 100px;
     font-weight: bold;
@@ -117,7 +118,7 @@ header .n2_image img {
 }
 
 .n2_center h4 {
-    z-index: 777;
+    z-index: 666;
     color: #ffffff;
     font-size: 50px;
     font-weight: bold;
@@ -127,10 +128,9 @@ header .n2_image img {
 }
 
 .n2_headerline {
-    z-index: 0;
     width: 100%;
     height: 80px;
-    position: relative;
+ 
     background-color: #27a4f8c4;
     margin-bottom: 50px;
     padding-top: 15px;
@@ -138,7 +138,7 @@ header .n2_image img {
 }
 
 .n2_headerline h1 {
-    z-index: 0;
+    z-index: 1;
     text-align: center;
     font-size: 40px;
     align-items: center;
@@ -518,6 +518,7 @@ th {
         display: none;
     }
     header .n2_navigation.active {
+        z-index: 899;
         position: fixed;
         width: 100%;
         height: 100vh;
@@ -530,7 +531,7 @@ th {
 
     }
     header .n2_navigation.active .n2_navigation_items {
-        z-index: 999 ;
+        z-index: 888;
         background: #fff;
         width: 500px;
         max-width: 500px;
@@ -544,14 +545,15 @@ th {
     }
 
     header .n2_navigation .n2_navigation_items a {
-        z-index: 999 ;
+        z-index: 888 ;
         color: #222;
         font-size: 25px;
         margin: 20px;
     }
-
+    header .n2_navigation .n2_navigation_items a:hover{
+        color: #000;
+    }
     header .n2_navigation .n2_navigation_items a:before {
-        z-index: 999 ;
         background: #222;
         height: 5px;
     }
@@ -848,6 +850,66 @@ th {
     }
 
 }
+
+
+
+/* @media screen and (max-width:980px) {
+    .con{
+        display: block;
+    }
+    .con .row {
+        display: block;
+    }
+    .con .row img {
+        margin-left: 123px;
+        width: 66%;
+    }
+    
+    .content {
+        margin-top: 20px;
+        padding: 0 100px;
+    }
+    .content h1,h2 {
+        font-size: 25px;
+
+    }
+
+    img{
+         width: 70%;
+    }
+} */
+
+
+
+/* @media only screen and (max-width: 1024px) {
+    .con .row img{
+        width: 89%;
+        margin-left: 49px;
+        margin-left: 93px;
+    }
+    
+    .con .row h1 {
+        margin-right: 60px;
+    }
+    
+    .con .row p {
+        margin-right: 103px;
+    }
+  }
+  @media only screen and (max-width: 768px) {
+    .con{
+    display: block;
+    }
+    .con .row {
+        display: block;
+    }
+    img{
+        width: 70%;
+
+    }
+
+  } */
+
 
 
 
