--- a/css/expore.css
+++ b/css/expore.css
@@ -534,6 +534,7 @@ section  h1 {
     }
 
     header .n2_navigation.active {
+         z-index: 888;
         position: fixed;
         width: 100%;
         height: 100vh;
@@ -547,6 +548,7 @@ section  h1 {
     }
 
     header .n2_navigation.active .n2_navigation_items {
+         z-index: 888;
         background: #fff;
         width: 500px;
         max-width: 500px;
