--- a/css/expore.css
+++ b/css/expore.css
@@ -691,8 +691,7 @@ header:before{
     left: 10%;
     font-size: 13px;
   }
-h4,
-.h4 {
+.n2_footer_items h4 {
     font-size: 12px;
 }
 
@@ -715,13 +714,12 @@ h4,
         height: 350px;
     }
     .pagination a {
-    left: 7%;
+    left: 5%;
     font-size: 13px;
   }
     .n2_footer_items h4 {
         font-size: 10px;
     }
-
     .n2_footer .n2_footer_items li {
         font-size: 7px;
     }
