--- a/css/contact.css
+++ b/css/contact.css
@@ -360,10 +360,13 @@ header .n2_image img {
 @media only screen and (max-width: 476px) {
     header {
         padding: 15px 30px;
-        height: 150vh;
+        height: 200vh;
     } 
+     header:before {
+        height: 200vh;
+    }  
     .n2_container_contact{
-        top:70%;
+        top:50%;
         left: 50%;
         grid-template-columns: 100%;
         gap:100px
